...
    <string name="invite">Invite</string>
    <string name="action_add_person">Add member</string>
    <string name="action_remove_person">Remove member</string>
    <string name="action_change_roles">Change roles</string>
    <string name="dialog_add_member_title">Add a member</string>
    <string name="dialog_add_member_text">Enter username or email:</string>
    <string name="add">Add</string>

    <string name="title_activity_modify_group">ModifyGroup</string>
    <string name="modify_group_add">Add members</string>
    <string name="modify_group_roles">Create new roles</string>

    <string name="CreateEditEarlyDate">Invalide date (already past)</string>
...
    <string name="answers_poll">answer</string>
    <string name="title_activity_list_participant">Add participants</string>
    <string name="member_poll">%d member</string>
    <string name="participant_poll">%d participant</string>
    <string name="minus_poll">-</string>
    <string name="plus_poll">+</string>
    <string name="empty_name_poll">Name should not be empty</string>
    <string name="empty_description_poll">Description should not be empty</string>
    <string name="empty_date_poll">A deadline should be selected</string>
    <string name="less_two_answers_poll">User should be able to choose among at least 2 answers</string>
    <string name="no_participants_poll">A participant should be enrolled in this survey</string>
    <string name="no_answer_poll">User should be able to choose at least an answer</string>
    <string name="error_poll">Error while creating your poll</string>
    <string name="title_list_poll">List of your polls</string>
    <string name="title_vote_poll">Vote for this poll</string>
    <string name="title_result_poll">Result of the poll</string>
    <string name="too_many_answers_poll">You can\'t choose more than %d answers!</string>
    <string name="vote_success_poll">Success! Your vote has been taken into account! Thanks for your participation</string>
...
